--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,21 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
+//    compileSdkVersion 31
     defaultConfig {
         applicationId "com.pasm.smscast"
         minSdk 21
-        targetSdk 29
+        targetSdk 31
+        compileSdk 31
         versionCode 1
-        versionName '1.1.1'
-        resConfigs "nodpi"
+        versionName '1.3'
+        resourceConfigurations += ['nodpi']
     }
     buildTypes {
         release {
             minifyEnabled true
             shrinkResources true
-            zipAlignEnabled true
+//            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             android.applicationVariants.all { variant ->
                 variant.outputs.all {
@@ -23,6 +24,7 @@ android {
             }
         }
     }
+    namespace 'com.pasm.smscast'
 }
 
 dependencies {
