--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,7 @@ org.gradle.jvmargs=-Xmx4096m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
 
